refactor: update routes to work with https

--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -5,7 +5,7 @@
 <div id='bdayCountdown'>
     <h1 class="title">NodeJS - Birthday Countdown</h1>
 
-    <form id="birthday_count_form" method="post" action="/">
+    <form id="birthday_count_form" method="post" action="/app">
     <table>
         <tbody>
             <tr><td><input type="text" name="name" id="name_form_id" value="{{ name }}" placeholder="Enter your name"></td></tr>
