refactor: redo the css styling, adjust template accordingly

--- a/app/areas/error/404.njk
+++ b/app/areas/error/404.njk
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="error.css" />
 </head>
 
 <img src="img/deadlink.jpg" class="errorImg" alt="Dead Link">
