--- a/app/areas/error/all.njk
+++ b/app/areas/error/all.njk
@@ -1,5 +1,5 @@
 <head>
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="error.css" />
 </head>
 
 <img src={{ giphyImage }} class="errorImg" alt="Error">
