--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -1,25 +1,34 @@
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap&h=300" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<div id='bdayCountdown'>
-    <h1 class="title">NodeJS - Birthday Countdown</h1>
+<div class="content-wrap">
+    <div class="info">
+        <span class="more-info">hover here for more info
 
-    <form id="birthday_count_form" method="post" action="/app">
-    <table>
-        <tbody>
-            <tr><td><input type="text" name="name" id="name_form_id" value="{{ name }}" placeholder="Enter your name"></td></tr>
-            <tr><td><input type="date" name="date" id="date_form_id" value="{{ date }}"></td></tr>
-            <tr><td><input name="countBtn" id="submit_form_id" type="submit" value="Count days"></td></tr>
-        </tbody>
-        <tfoot>
-            <tr colspan="2">
-                <td><input name="loadBtn" type="submit" id="submit_form2_id" value="Load Info"></td>
-                <td><input name="saveBtn" type="submit" id="submit_form3_id" value="Save & Count days"></td>
-            </tr>
-        </tfoot>
-    </table>
+        <div class="details">
+            <p>Count the remaining days until your next birthday.</p>
+
+            <p>You may save and load your info but since I didn't bother writing the logic to prevent overwriting existing records... feel free to do so :)</p>
+        </div>
+        </span>
+
+        <h1 class="title">NodeJS - Birthday Countdown Web App</h1>
+    </div>
+
+    <form id="birthday-countdown-form" method="post" action="/app">
+        <div class="user-input">
+            <input type="text" name="name" value="{{ name }}" placeholder="Enter your name" required>
+            <input type="date" name="date" value="{{ date }}" required>
+            <input class="btn btn-bg" name="countBtn" type="submit" value="Count remaining days">
+        </div>
+
+        <div class="actions">
+            <input class="btn" name="loadBtn" type="submit" value="Load User Info">
+            <input class="btn" name="saveBtn" type="submit" value="Save & Count days">
+        </div>
     </form>
 
-    <label id="days_label">{{ message }}</label>
+    <span id="days_label">{{ message }}</span>
 </div>
