--- a/public/style.css
+++ b/public/style.css
@@ -1,90 +1,152 @@
-@import url('https://fonts.googleapis.com/css?family=Jua');
-
 * {
-    padding: 0;
-    margin: 0;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
 }
 
 body {
-    padding: 50px;
-    font: 18px 'Jua', "Lucida Grande", Helvetica, Arial, sans-serif;
-    background: #1d3a80;
+  background: #31487e;
 }
 
 a {
-    color: #00B7FF;
+  color: #00b7ff;
 }
 
-#bdayCountdown {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 4%;
-    background: rgba(255, 255, 255, 0.1);
+.flexedCenter, html,
+body, .content-wrap .info, .content-wrap .info .more-info .details, #birthday-countdown-form .actions {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
-.title {
-    display: block;
-    text-align: center;
-    float: left;
-    width: 100%;
-    color: white;
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow: hidden;
+  max-height: 100vh;
+  max-width: 100vw;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
-#birthday_count_form table {
-    float: left;
-    padding: 2%;
-    width: 96%;
+.content-wrap {
+  max-width: 500px;
+  padding: 2rem;
+  background-color: #233359;
+  position: relative;
 }
 
-#birthday_count_form table input {
-    font: 18px 'Jua', "Lucida Grande", Helvetica, Arial, sans-serif;
-    border: none;
-    background: rgba(255, 255, 255, 0.9);
-    cursor: hand;
-    text-align: left;
-    width: 100%;
-    padding: 2%;
-    margin: 0.5%;
+.content-wrap .info {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
+  max-width: 500px;
+  color: white;
 }
 
-#birthday_count_form table input[type='submit'] {
-    background: #40b1b1;
-    color: white;
-    text-align: center;
-    margin-top: 2%;
+.content-wrap .info .more-info {
+  display: block;
+  cursor: pointer;
 }
 
-#birthday_count_form table tfoot tr td:nth-child(even) {
-    width: 49%;
-    margin-left: 1%;
-    float: left;
-}#birthday_count_form table tfoot tr td:nth-child(odd) {
-     width: 49%;
-     margin-right: 1%;
-     float: left;
- }
+.content-wrap .info .more-info .details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 1rem;
+  text-align: justify;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #141e35;
+  z-index: -1;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: opacity 300ms ease;
+  transition: opacity 300ms ease;
+  padding: 2rem;
+}
 
-#birthday_count_form table input[type='submit']:hover {
-    background: #209191;
-    transition: 0.5s background;
+.content-wrap .info .more-info .details p {
+  margin-top: 1rem;
+}
+
+.content-wrap .info .more-info:hover .details, .content-wrap .info .more-info:active .details {
+  opacity: 1;
+  z-index: 1;
+}
+
+#birthday-countdown-form {
+  width: 100%;
+  padding: 1rem;
+}
+
+#birthday-countdown-form .actions {
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-top: 1rem;
+}
+
+#birthday-countdown-form .actions input {
+  width: 48%;
+}
+
+#birthday-countdown-form input {
+  width: 100%;
+  padding: 1rem;
+  margin: 0.2rem 0;
+  border-radius: 2px;
+  border: none;
+  font-size: 100%;
+}
+
+#birthday-countdown-form input.btn {
+  background-color: #53539988;
+  color: white;
+  text-transform: capitalize;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#birthday-countdown-form input.btn:hover, #birthday-countdown-form input.btn:active {
+  color: #31487e;
+  background-color: white;
+  -webkit-transition: background-color 300ms ease;
+  transition: background-color 300ms ease;
+}
+
+#birthday-countdown-form > div {
+  width: 100%;
 }
 
 #days_label {
-    display: block;
-    float: left;
-    text-align: center;
-    color: white;
-    background: rgba(255, 50, 50, 0.7);
-    width: 100%;
+  display: block;
+  background-color: #df4040;
+  color: white;
+  width: 100%;
+  text-align: center;
+  line-height: 2;
 }
-
-.errorImg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 70vh;
-    box-shadow: #225 5px 5px 25px 8px;
-}
+/*# sourceMappingURL=style.css.map */
