--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -20,7 +20,7 @@
     <form id="birthday-countdown-form" method="post" action="/app">
         <div class="user-input">
             <input type="text" name="name" value="{{ name }}" placeholder="Enter your name" required>
-            <input type="date" name="date" value="{{ date }}" required>
+            <input type="date" name="date" value="{{ date }}">
             <input class="btn btn-bg" name="countBtn" type="submit" value="Count remaining days">
         </div>
 
