refactor: make responsive friendly

--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -1,4 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap&h=300" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -14,7 +19,7 @@
         </div>
         </span>
 
-        <h1 class="title">NodeJS - Birthday Countdown Web App</h1>
+        <h1 class="title">Birthday Countdown Web App</h1>
     </div>
 
     <form id="birthday-countdown-form" method="post" action="/app">
@@ -32,3 +37,7 @@
 
     <span id="days_label">{{ message }}</span>
 </div>
+
+<body>
+  
+</body>
