--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ a {
 }
 
 .flexedCenter, html,
-body, .content-wrap .info, .content-wrap .info .more-info .details, #birthday-countdown-form .actions {
+body, .content-wrap, .content-wrap .info, .content-wrap .info .more-info .details, #birthday-countdown-form .actions {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -43,10 +43,15 @@ body {
 }
 
 .content-wrap {
-  max-width: 500px;
+  max-width: 600px;
+  width: 100%;
   padding: 2rem;
   background-color: #233359;
   position: relative;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .content-wrap .info {
@@ -148,5 +153,11 @@ body {
   width: 100%;
   text-align: center;
   line-height: 2;
+}
+
+@media only screen and (max-width: 800px) {
+  .content-wrap {
+    max-width: 100vw;
+  }
 }
 /*# sourceMappingURL=style.css.map */
