--- a/public/style.scss
+++ b/public/style.scss
@@ -35,10 +35,13 @@ body {
 }
 
 .content-wrap {
-  max-width: 500px;
+  max-width: 600px;
+  width: 100%;
   padding: 2rem;
   background-color: darken($primaryColor, 10%);
   position: relative;
+  @extend .flexedCenter;
+  flex-direction: column;
 
   .info {
     @extend .flexedCenter;
@@ -134,4 +137,10 @@ body {
   width: 100%;
   text-align: center;
   line-height: 2;
+}
+
+@media only screen and (max-width: 800px) {
+  .content-wrap {
+    max-width: 100vw;
+  }
 }
