refactor: remove annoying webkit styling

--- a/public/style.css
+++ b/public/style.css
@@ -27,6 +27,10 @@ body, .content-wrap, .content-wrap .info, .content-wrap .info .more-info .detail
           align-items: center;
 }
 
+input {
+  -webkit-appearance: none;
+}
+
 html,
 body {
   width: 100%;
