refactor: set default date to now, autofocus name

--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -24,8 +24,8 @@
 
     <form id="birthday-countdown-form" method="post" action="/app">
         <div class="user-input">
-            <input type="text" name="name" value="{{ name }}" placeholder="Enter your name" required>
-            <input type="date" name="date" value="{{ date }}">
+            <input type="text" name="name" value="{{ name }}" placeholder="Enter your name" required autofocus>
+            <input type="date" name="date" value={{ date }}>
             <input class="btn btn-bg" name="countBtn" type="submit" value="Count remaining days">
         </div>
 
