--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+  font-size: 1rem;
   background: #31487e;
 }
 
@@ -128,7 +129,6 @@ body {
   margin: 0.2rem 0;
   border-radius: 2px;
   border: none;
-  font-size: 100%;
 }
 
 #birthday-countdown-form input.btn {
