--- a/app/areas/homepage/homepage-template.njk
+++ b/app/areas/homepage/homepage-template.njk
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=0.9">
-  <title>Document</title>
+  <title>{{ pageTitle }}</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap&h=300" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
